--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap4-rtl.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/ReactToastify.css" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/responce.css" />
+    <link rel="stylesheet" href="/css/bootstrap4-rtl.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/fonts.css" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/responce.css" />
+    <link rel="stylesheet" href="/css/404.css" />
+    <link rel="stylesheet" href="/css/ReactToastify copy.css" />
+    <link rel="stylesheet" href="/css/materialui.css" />
 
     <title>Test</title>
   </head>
   <body>
     <div id="root"></div>
   </body>
-  <script src="script/jquery.min.js"></script>
-  <script src="script/bootstrap.min.js"></script>
-  <script src="script/popper.min.js"></script>
-  <script src="script/modernizr-custom.js"></script>
-  <script src="script/script.js"></script>
-
+  <script src="/script/jquery.min.js"></script>
+  <script src="/script/bootstrap.min.js"></script>
+  <script src="/script/popper.min.js"></script>
+  <script src="/script/modernizr-custom.js"></script>
+  <script src="/script/script.js"></script>
 </html>
